fix: Added gap between icons

--- a/Explorer/src/app/feature-modules/blog/comment/comment.component.css
+++ b/Explorer/src/app/feature-modules/blog/comment/comment.component.css
@@ -43,6 +43,7 @@
   display: flex;
   justify-content: space-around; /* Rasporedjuje dugmad ravnomerno */
   align-items: center; /* Poravnava elemente vertikalno */
+  gap: 8px;
 }
 
 .rating-feedback {
@@ -102,7 +103,7 @@
 .comment-actions {
   display: flex;
   justify-content: flex-end;
-  gap: 10px;
+  gap: 8px;
   margin-top: 8px;
 }
 
